<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_margin="50dp">

        <Button
            android:id="@+id/bAdministracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/sty_BotonMenu"
            android:text="@string/sp_Administración"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
        <Button
            android:id="@+id/bCierres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/sty_BotonMenu"
            android:text="@string/sp_CierreActividades"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
        <Button
            android:id="@+id/bEntregarInsumos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/sty_BotonMenu"
            android:text="@string/sp_EntregaInsumos"/>

    </LinearLayout>
    <GridLayout
        android:id="@+id/glTeclado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bTecla_7"
            style="@style/sty_BotonTeclado"
            android:text="@string/st_Tecla_7"/>
        <Button
            android:id="@+id/bTecla_8"
            style="@style/sty_BotonTeclado"
            android:text="@string/st_Tecla_8"/>
        <Button
            android:id="@+id/bTecla_9"
            style="@style/sty_BotonTeclado"
            android:text="@string/st_Tecla_9"/>
        <Button
            android:id="@+id/bTecla_4"
            style="@style/sty_BotonTeclado"
            android:text="@string/st_Tecla_4"/>
        <Button
            android:id="@+id/bTecla_5"
            style="@style/sty_BotonTeclado"
            android:text="@string/st_Tecla_5"/>
        <Button
            android:id="@+id/bTecla_6"
            style="@style/sty_BotonTeclado"
            android:text="@string/st_Tecla_6"/>
        <Button
            android:id="@+id/bTecla_1"
            style="@style/sty_BotonTeclado"
            android:text="@string/st_Tecla_1"/>
        <Button
            android:id="@+id/bTecla_2"
            style="@style/sty_BotonTeclado"
            android:text="@string/st_Tecla_2"/>
        <Button
            android:id="@+id/bTecla_3"
            style="@style/sty_BotonTeclado"
            android:text="@string/st_Tecla_3"/>
        <Button
            android:id="@+id/bTecla_Borrar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            style="@style/sty_BotonAmarillo"
            android:text="@string/st_Borrar"
            android:textSize="10sp"/>

        <Button
            android:id="@+id/bTecla_0"
            style="@style/sty_BotonTeclado"
            android:text="@string/st_Tecla_0"/>
        <Button
            android:id="@+id/bTecla_Entrar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            style="@style/sty_BotonVerde"
            android:text="@string/st_Entrar"
            android:textSize="10sp"/>
    </GridLayout>
    <TextView
        android:id="@+id/tvClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:text="----"
        android:textAlignment="center"
        android:layout_gravity="center_vertical"/>



</LinearLayout>