<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityAdmon"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_margin="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text= "@string/sa_Distribuidores"
            android:textColor="@color/Negro"
            android:textAlignment="center"
            android:layout_gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10">
            <EditText
                android:id="@+id/etNombreDistribuidor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:hint="@string/sa_Nombre"
                android:textColor="@color/Negro"
                android:layout_margin="10dp"/>
            <EditText
                android:id="@+id/etCelularDistribuidor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:hint="@string/sa_Celular"
                android:textColor="@color/Negro"
                android:layout_margin="10dp"
                android:inputType="phone"/>
        </LinearLayout>
        <Button
            android:id="@+id/bCrearDistribuidor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sa_CrearDistribuidor"
            style="@style/sty_BotonVerde"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                style="@style/sty_TextoColumnas"
                android:layout_weight="1.5"
                android:text="@string/sa_TituloNombre"/>
            <TextView
                style="@style/sty_TextoColumnas"
                android:layout_weight="1"
                android:text="@string/sa_TituloCelular"/>
            <TextView
                style="@style/sty_TextoColumnas"
                android:layout_weight="1"
                android:text="@string/sa_TituloAhorro"/>
            <TextView
                style="@style/sty_TextoColumnas"
                android:layout_weight="1"
                android:text="@string/sa_TituloDeuda"/>
            <TextView
                style="@style/sty_TextoColumnas"
                android:layout_weight="0.5"
                android:text="@string/sa_TituloTazasActual"/>
        </LinearLayout>

        <ListView
            android:id="@+id/lvDistribuidores"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/lv_distribuidores">
        </ListView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tvEliminarDistribuidor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/RojoCoffee"
                android:textSize="24sp"/>
            <Button
                android:id="@+id/bEliminarDistribuidor"
                style="@style/sty_BotonRojo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sa_EliminarDistribuidor"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:layout_margin="20dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text= "@string/sa_Productos"
                android:textColor="@color/Negro"
                android:textAlignment="center"
                android:layout_gravity="center_vertical"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="14">
                <EditText
                    android:id="@+id/etItemProducto"
                    style="@style/sty_TextoProductos"
                    android:layout_weight="2"
                    android:hint="@string/sa_ItemProducto"/>
                <EditText
                    android:id="@+id/etNombreProducto"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:hint="@string/sa_Nombre"
                    android:textColor="@color/Negro"
                    android:layout_margin="10dp"/>
                <EditText
                    android:id="@+id/etPrecioProducto"
                    style="@style/sty_TextoProductos"
                    android:layout_weight="2"
                    android:hint="@string/sa_PrecioProducto"/>
                <EditText
                    android:id="@+id/etComisionProducto"
                    style="@style/sty_TextoProductos"
                    android:layout_weight="2"
                    android:hint="@string/sa_ComisiónProducto"/>
                <EditText
                    android:id="@+id/etCostoProducto"
                    style="@style/sty_TextoProductos"
                    android:layout_weight="2"
                    android:hint="@string/sa_CostoProducto"/>
                <EditText
                    android:id="@+id/etCantidadProducto"
                    style="@style/sty_TextoProductos"
                    android:layout_weight="2"
                    android:hint="@string/sa_CantidadProducto"/>

            </LinearLayout>
            <Button
                android:id="@+id/bCrearProducto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/sa_CrearProducto"
                style="@style/sty_BotonVerde"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5.5">
                <TextView
                    style="@style/sty_TextoColumnas"
                    android:layout_weight="0.5"
                    android:text="@string/sa_TituloItemProducto"/>

                <TextView
                    style="@style/sty_TextoColumnas"
                    android:layout_weight="1.5"
                    android:text="@string/sa_TituloNombreProducto"/>
                <TextView
                    style="@style/sty_TextoColumnas"
                    android:layout_weight="1"
                    android:text="@string/sa_TituloPrecioProducto"/>
                <TextView
                    style="@style/sty_TextoColumnas"
                    android:layout_weight="1"
                    android:text="@string/sa_TituloComisiónProducto"/>
                <TextView
                    style="@style/sty_TextoColumnas"
                    android:layout_weight="1"
                    android:text="@string/sa_TituloCostoProducto"/>
                <TextView
                    style="@style/sty_TextoColumnas"
                    android:layout_weight="0.5"
                    android:text="@string/sa_TituloCantidadProducto"/>
            </LinearLayout>

            <ListView
                android:id="@+id/lvProductos"
                android:layout_width="match_parent"
                android:layout_height="200dp">
            </ListView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvEliminarProducto"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/RojoCoffee"
                    android:textSize="24sp"/>
                <Button
                    android:id="@+id/bEliminarProducto"
                    style="@style/sty_BotonRojo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/sa_EliminarDistribuidor"/>
            </LinearLayout>
    </LinearLayout>

</LinearLayout>