<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCierres"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_margin="50dp">

        <Button
            android:id="@+id/bEntregaDia"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            style="@style/sty_BotonMenu"
            android:text="@string/sc_EntregaDía"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <Button
            android:id="@+id/bEntregaNoche"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            style="@style/sty_BotonMenu"
            android:text="@string/sc_EntregaNoche"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="50dp"/>
        <Button
            android:id="@+id/bEntregaAdicional"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            style="@style/sty_BotonMenu"
            android:text="@string/sc_EntregaAdicional"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:gravity="center"
        android:layout_margin="100dp">

        <TextView
            android:id="@+id/tvEntregaDia"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            style="@style/sty_TextoTotalesDia"
            android:textSize="32dp"
            android:text="@string/sc_EntregaDía"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
        <TextView
            android:id="@+id/tvEntregaNoche"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            style="@style/sty_TextoTotalesDia"
            android:textSize="32dp"
            android:text="@string/sc_EntregaNoche"/>
        <android.support.v4.widget.Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
        <TextView
            android:id="@+id/tvEntregaAdicional"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:textSize="32dp"
            style="@style/sty_TextoTotalesDia"
            android:text="@string/sc_EntregaAdicional"/>

    </LinearLayout>
</LinearLayout>